data/derived/fa15/progs/unify/prog3464.ml.out
Characters 515-528:
  | Tower(a, b, c) -> if(x < 1.0 && x > -1.0 || y < 1.0 && y > -1.0) then 0.5 else eval(a, x, y) + eval(b, x, y) + eval(c, x, y);;
                                                                                   ^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
